deploy/releases/0.8.1/readme.adoc
= Runtime Component Operator v0.8.1

== Changelog

All notable changes are documented in the link:++https://github.com/application-stacks/runtime-component-operator/blob/main/CHANGELOG.md#081++[Changelog].

== Supported Environments

The Runtime Component Operator is tested and built on the following CPU architectures:

* amd64 (Supported with Installation options 1, 2 and 3)
* ppc64le (IBM Power. Supported with Installation options 2 and 3 only)
* s390x (IBM Z Linux. Supported with Installation options 2 and 3 only)

OpenShift 4.6 or higher is supported. The operator is also supported on any cluster that has Kubernetes v1.19 or higher.

== Installation

=== Option 1: Install using Operator Lifecycle Manager (OLM) on OpenShift

Runtime Component Operator is available from Red Hat's Certified OpenShift Operators catalog. From the integrated OperatorHub in OpenShift, filter by selecting `Certified` checkbox under `Source`. Search for `Runtime Component`. Click on the tile with `Runtime Component` to install the operator. Additional information is link:++https://catalog.redhat.com/software/operators/detail/5e98749c2989e6a90307acef#deploy-instructions/++[here]. Note that only **amd64** is supported with this install option at the moment.

=== Option 2: Install using kubectl

See the instructions link:++kubectl/++[here].

=== Option 3: Install using kustomize

See the instructions link:++kustomize/++[here].


== Current Limitations

* Knative support is limited. Values specified for `.spec.autoscaling`, `.spec.resources` and `.spec.replicas` fields would not apply for Knative when enabled using `.spec.createKnativeService` field.
* Monitoring feature does not support integration with Knative Service. Prometheus Operator is required to use ServiceMonitor.
* After the initial deployment of `RuntimeComponent`, any changes to its labels would be applied only when one of the fields from `.spec` is updated.
